@@ -1,1 +1,13 @@
 # projectRhythm
+
+## Settings for running program
+1. Download javafx jdk
+2. Create user library. (Preferences > Java > Build Path > user Libraries)
+3. Add javafx jar files in the user library.
+4. Apply and close.
+5. Add created library in project. (Project > Build Path > Add Libraries)
+6. Add run configuration arguments. (Run > Run Configuration > Arguments)
+   <br> --module-path "{javafx directory path}\lib" --add-modules javafx.controls,javafx.fxml,javafx.media
+
+### More Information for running program
+https://luminitworld.tistory.com/44
